feat: Update backend with smart wallet deletion, keycloak integration, and config cleanup