@@ -3,25 +3,27 @@ package com.tigtech.persfinance.security;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.convert.converter.Converter;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AbstractAuthenticationToken;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 
 @Configuration
-@EnableMethodSecurity
+@EnableMethodSecurity(jsr250Enabled = true)
 public class SecurityConfig {
 
     /**
@@ -35,10 +37,20 @@ public class SecurityConfig {
      * e converte para authorities do Spring: ROLE_<role>
      */
     @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+    CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        // Allow common frontend development ports
+        configuration.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:3000", "http://localhost:5173"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type")); 
+        configuration.setAllowCredentials(true);
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        return source;
     }
-    
+
+
     @Bean
     AuthoritiesConverter realmRolesAuthoritiesConverter() {
         return claims -> {
@@ -46,7 +58,14 @@ public class SecurityConfig {
             if (!(realmAccessObj instanceof Map<?, ?> realmAccess)) return List.of();
 
             Object rolesObj = realmAccess.get("roles");
-            if (!(rolesObj instanceof Collection<?> roles)) return List.of();
+            Collection<?> roles;
+            if (rolesObj instanceof Collection<?> coll) {
+                roles = coll;
+            } else if (rolesObj instanceof Object[] arr) {
+                roles = Arrays.asList(arr);
+            } else {
+                return List.of();
+            }
 
             return roles.stream()
                     .filter(r -> r != null)
@@ -72,17 +91,14 @@ public class SecurityConfig {
 
 
 
-    /**
-     * SecurityFilterChain do Resource Server com JWT + stateless.
-     * - /me autenticado
-     * - /api/auth/login e /api/auth/register públicos
-     * - resto bloqueado
-     */
     @Bean
     SecurityFilterChain resourceServerSecurityFilterChain(
             HttpSecurity http,
             Converter<Jwt, AbstractAuthenticationToken> jwtAuthenticationConverter
     ) throws Exception {
+
+        // 1. Explicitly enable CORS using your bean
+        http.cors(Customizer.withDefaults());
 
         http.oauth2ResourceServer(rs ->
                 rs.jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter))
@@ -92,29 +108,18 @@ public class SecurityConfig {
         http.csrf(csrf -> csrf.disable());
 
         http.authorizeHttpRequests(auth -> auth
-                // Public auth endpoints
-                .requestMatchers(HttpMethod.POST,
-                        "/api/auth/login",
-                        "/api/auth/register",
-                        "/api/auth/forgot",
-                        "/api/auth/reset"
-                ).permitAll()
-
-                // Public GET
-                .requestMatchers(HttpMethod.GET,
-                        "/api/auth/hello",
-                        "/actuator/health",
-                        "/actuator/mappings"
-                ).permitAll()
-
-                // Protected
-                .requestMatchers(HttpMethod.GET, "/api/auth/me").authenticated()
-
-                // Everything else
-                .anyRequest().authenticated()
+            .requestMatchers("/error").permitAll()
+            .requestMatchers("/actuator/health", "/actuator/info", "/q/health/**").permitAll()
+            .requestMatchers("/admin/**").hasRole("ADMIN")
+            // Ensure /api/me requires a valid token (prevents NPE in controller if auth fails silently)
+            .requestMatchers("/api/me").authenticated()
+            .requestMatchers("/api/**").authenticated()
+            .anyRequest().denyAll()
         );
-
 
         return http.build();
     }
+
+
+
 }
